crates/cli/tests/snapshots/help__agent.snap
---
source: crates/cli/tests/help.rs
expression: "help(&[\"agent\", \"--help\"])"
---
Hand off to the Omarchy default agent

Usage: omacell agent [OPTIONS] [PROMPT] [COMMAND]

Commands:
  diagnose  Build a WP-19 diagnostic bundle and hand it to the agent

Arguments:
  [PROMPT]  Prompt for the default agent

Options:
      --json                   Machine-readable stdout (and stderr errors)
      --book <BOOK>            Workbook path passed to the agent
      --dry-run                Validate writes without changing files
      --selection <SELECTION>  Current selection (`Sheet!A1`)
      --set <KEY=VALUE>        Overlay a dotted config key (`appearance.grid_lines=false`). Repeatable
      --config <FILE>          Explicit config file; replaces `$XDG_CONFIG_HOME/omacell/config.toml`
      --theme <FILE>           Explicit Omacell role overlay TOML; wins over `OMACELL_THEME`
  -q, --quiet                  Suppress non-error human output
  -v, --verbose...             Increase log verbosity
      --from-workbook <FILE>   Workbook whose frozen settings overlay configuration
  -h, --help                   Print help
