crates/cli/tests/snapshots/help__agent_diagnose.snap
---
source: crates/cli/tests/help.rs
expression: "help(&[\"agent\", \"diagnose\", \"--help\"])"
---
Build a WP-19 diagnostic bundle and hand it to the agent

Usage: omacell agent diagnose [OPTIONS]

Options:
      --json                   Machine-readable stdout (and stderr errors)
      --pid <PID>              Optional process id to include in the bundle
      --book <BOOK>            Workbook path
      --dry-run                Validate writes without changing files
      --selection <SELECTION>  Current selection (`Sheet!A1`)
      --set <KEY=VALUE>        Overlay a dotted config key (`appearance.grid_lines=false`). Repeatable
      --config <FILE>          Explicit config file; replaces `~/.config/omacell/config.toml`
      --theme <FILE>           Explicit theme `colors.toml`; wins over `OMACELL_THEME`
  -q, --quiet                  Suppress non-error human output
  -v, --verbose...             Increase log verbosity
      --from-workbook <FILE>   Workbook whose frozen settings overlay configuration
  -h, --help                   Print help
