crates/cli/tests/snapshots/help__ai.snap
---
source: crates/cli/tests/help.rs
expression: "help(&[\"ai\", \"--help\"])"
---
AI provider, card, log, and usage

Usage: omacell ai [OPTIONS] <COMMAND>

Commands:
  setup  Detect local servers and write a sparse user config
  card   Print a workbook card
  log    Read `~/.local/state/omacell/ai/log.jsonl`
  usage  Token usage totals from the audit log

Options:
      --json                  Machine-readable stdout (and stderr errors)
      --dry-run               Validate writes without changing files
      --set <KEY=VALUE>       Overlay a dotted config key (`appearance.grid_lines=false`). Repeatable
      --config <FILE>         Explicit config file; replaces `~/.config/omacell/config.toml`
      --theme <FILE>          Explicit theme `colors.toml`; wins over `OMACELL_THEME`
  -q, --quiet                 Suppress non-error human output
  -v, --verbose...            Increase log verbosity
      --from-workbook <FILE>  Workbook whose frozen settings overlay configuration
  -h, --help                  Print help
