crates/cli/tests/snapshots/help__ai_card.snap
---
source: crates/cli/tests/help.rs
expression: "help(&[\"ai\", \"card\", \"--help\"])"
---
Print a workbook card

Usage: omacell ai card [OPTIONS] <BOOK>

Arguments:
  <BOOK>  Workbook path

Options:
      --json                   Machine-readable stdout (and stderr errors)
      --level <LEVEL>          `summary` / `columns` / `sample` / `full` [default: summary]
      --dry-run                Validate writes without changing files
      --range <RANGE>          A1 range for `full`
      --selection <SELECTION>  Selection for dependency focus
      --set <KEY=VALUE>        Overlay a dotted config key (`appearance.grid_lines=false`). Repeatable
      --config <FILE>          Explicit config file; replaces `$XDG_CONFIG_HOME/omacell/config.toml`
      --offset <OFFSET>        Zero-based row offset within `--range` [default: 0]
      --limit <LIMIT>          Maximum rows returned from `--range` [default: 128]
      --theme <FILE>           Explicit Omacell role overlay TOML; wins over `OMACELL_THEME`
  -q, --quiet                  Suppress non-error human output
  -v, --verbose...             Increase log verbosity
      --from-workbook <FILE>   Workbook whose frozen settings overlay configuration
  -h, --help                   Print help
