crates/cli/tests/snapshots/help__changeset_export.snap
---
source: crates/cli/tests/help.rs
expression: "help(&[\"changeset\", \"export\", \"--help\"])"
---
Export a changeset as `.omc`

Usage: omacell changeset export [OPTIONS] --omc <FILE> <ID>

Arguments:
  <ID>  Changeset id

Options:
      --json                  Machine-readable stdout (and stderr errors)
      --omc <FILE>            Destination `.omc` path
      --dry-run               Validate writes without changing files
      --set <KEY=VALUE>       Overlay a dotted config key (`appearance.grid_lines=false`). Repeatable
      --config <FILE>         Explicit config file; replaces `~/.config/omacell/config.toml`
      --theme <FILE>          Explicit theme `colors.toml`; wins over `OMACELL_THEME`
  -q, --quiet                 Suppress non-error human output
  -v, --verbose...            Increase log verbosity
      --from-workbook <FILE>  Workbook whose frozen settings overlay configuration
  -h, --help                  Print help
